# polta-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  run-pytest.yml
polta_cli/: metastore.py  metastore.tcss
polta_cli/screens/: tables.py  volumes.py
polta_cli/widgets/: delta_table_tree.py
sample/: metastore.py
tests/: test_spam.py
