[project]
name = "polta-cli"
version = "0.1.0"
description = "CLI applications for polta implementations."
authors = [
    {name = "JoshTG"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
  "polta (>=0.8.4,<0.9.0)",
  "pytest (>=8.3.5,<8.4.0)",
  "pytest-cov (>=6.2.1,<6.3.0)",
  "ruff (>=0.12.3,<0.13.0)",
  "textual (>=5.3.0,<5.4.0)",
  "tzdata (>=2025.2, <2026.1)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = [
  "D101",
  "DTZ001",
  "DTZ005",
  "DTZ006",
  "DTZ007",
  "ERA001"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.poetry.scripts]
metastore = "polta_cli.metastore:main"
